# ohlala-smartops

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MIGRATION_LOG.md  MIGRATION_STATUS.md  README.md  SECURITY.md  codecov.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/: BRANCH_PROTECTION_SETUP.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docker-publish.yml
docs/: DEPLOYMENT.md
src/ohlala_smartops/: __init__.py  __main__.py  constants.py  version.py
src/ohlala_smartops/ai/: __init__.py  bedrock_client.py  model_selector.py  prompts.py
src/ohlala_smartops/aws/: __init__.py  client.py  cloudwatch.py  cost_explorer.py  ec2.py  exceptions.py  metrics_emitter.py  ssm_commands.py  ssm_sessions.py  tagging.py
src/ohlala_smartops/bot/: __init__.py  adapter.py  app.py  card_handler.py  conversation_handler.py  handlers.py  health.py  message_handler.py  messages.py  state.py  teams_bot.py  typing_handler.py
src/ohlala_smartops/cards/: __init__.py  approval_cards.py
src/ohlala_smartops/commands/: __init__.py  base.py  commands_list.py  confirmation.py  costs.py  exec.py  find_by_tags.py  help.py  history.py  instance_details.py  list_instances.py  metrics.py  reboot.py  registry.py  start.py  status.py  stop.py  tag.py  token_usage.py  untag.py
src/ohlala_smartops/commands/adaptive_cards/: __init__.py  styles.py  templates.py
src/ohlala_smartops/commands/health/: __init__.py  card_builder.py  chart_builder.py  dashboard.py  metrics_collector.py  system_inspector.py
src/ohlala_smartops/config/: __init__.py  settings.py
src/ohlala_smartops/mcp/: __init__.py  exceptions.py  http_client.py  manager.py
src/ohlala_smartops/models/: __init__.py  approvals.py  cards.py  command_history.py  command_tracking.py  conversation.py  messages.py  requests.py
src/ohlala_smartops/utils/: __init__.py  audit_logger.py  bedrock_throttler.py  global_throttler.py  powershell.py  powershell_validator.py  ssm.py  ssm_utils.py  ssm_validation.py  token_estimator.py  token_tracker.py
src/ohlala_smartops/workflow/: __init__.py  command_tracker.py  write_operations.py
tests/: __init__.py  conftest.py  test_powershell_validator.py  test_ssm_utils.py  test_ssm_validation.py
tests/integration/: test_command_registration.py
tests/unit/: test_approval_cards.py  test_audit_logger.py  test_aws_client.py  test_aws_exceptions.py  test_bedrock_client.py  test_bedrock_throttler.py  test_bot_adapter.py  test_bot_app.py  test_bot_handlers.py  test_bot_health.py  test_bot_messages.py  test_bot_state.py  test_card_handler.py  test_cloudwatch.py  test_command_tracker.py  test_command_tracking_models.py  test_commands.py  test_config.py  test_constants.py  test_cost_explorer.py  test_ec2.py  test_global_throttler.py  test_instance_commands.py  test_instance_commands_extended.py  test_main.py  test_mcp_exceptions.py  test_mcp_http_client.py  test_mcp_manager.py  test_message_handler.py  test_metrics_emitter.py  test_model_selector.py  test_models_approvals.py  test_models_conversation.py  test_monitoring_commands.py  test_powershell.py  test_prompts.py  test_ssm.py  test_ssm_commands.py  test_ssm_execution_commands.py  test_ssm_sessions.py  (+9 more)
tests/unit/ai/: test_bedrock_client_tokens.py
tests/unit/bot/: test_conversation_handler.py  test_state_command_history.py
tests/unit/commands/: test_history.py  test_token_usage.py
tests/unit/commands/health/: __init__.py  test_card_builder.py  test_chart_builder.py  test_dashboard.py  test_metrics_collector.py  test_system_inspector.py
tests/unit/models/: test_command_history.py  test_conversation.py
